[metadata]
name = python-pip
version = 0.2
author = Jordan Raychev
author_email = jpraychev@gmail.com
description = Python PIP Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
Platform = Linux/Windows/MacOS
License = MIT
url = https://github.com/jpraychev/python-pip
project_urls =
    Bug Tracker = https://github.com/jpraychev/python-pip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src